--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<div class="content">
 				<span class="st-animated hide fadeInDown">Hello</span>
 				<h2 class="st-animated hide fadeInUp">I'm Asyfa</h2>
-				<p class="st-animated hide fadeInUpBig">sistem analys / ketua yayasan </p>
+				<p class="st-animated hide fadeInUpBig">sistem analys </p>
 			</div>
 		</div>
 		<!-- Home section .end -->
